<?xml version="1.0" encoding="utf-8"?>
    <resources>

        <string name="hello">Welcome to Login Activity</string>
        <string name="app_name">GradeUP Login</string>
        <string name="Username">Username</string>
        <string name="Password">Password</string>
        <string name="LoginBtn">Login</string>
        <string name="PostBtn">Post to thread</string>
        <string name="SignupBtn">Sign Up</string>
        <string name="LogoutBtn">Log Out</string>
        <string name="Welcome">GradeUP by A-Team</string>
        <string name="hello_world">Hello </string>
        <string name="action_settings">Settings</string>
    </resources>
